@@ -9,4 +9,9 @@ TargetProduct= 0x14c6
 
 CheckSuccess=20
 
+# Standard profile
 MessageContent="55534243123456780000000000000011060000000000000000000000000000"
+
+# CDC ether profile
+;MessageContent="55534243450100000002000080000611062000000100000000000000000000"
+;NoDriverLoading=1
